--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.0",
+        "php": "^7.3.0|^8.0",
         "illuminate/support": "^6|^7|^8",
         "illuminate/http": "^6|^7|^8"
     },
